#7 fix: boxes out of viewport

--- a/src/app/text-box/text-box.component.scss
+++ b/src/app/text-box/text-box.component.scss
@@ -1,11 +1,12 @@
 .textbox {
   background-color: white;
   width: 900px;
-  min-height: 100px; /* Mindesthöhe */
-  max-height: 90%;
-  padding: 10px; /* Abstand zum Inhalt */
-  font-size: 32px; /* Größe der Schrift */
+  height: 300px; /* Beispielhöhe */
+  padding: 10px;
+  font-size: 40px;
   margin: 20px;
+  font-family: "Calibri", sans-serif;
+  overflow-y: none;
 }
 
 .textbox p {
